<resources>
    <string name="app_name">AstroWeather</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_settings">Settings</string>

    <string name="coordinates_header">Coordinates</string>
    <string name="latitude_title">Latitude</string>
    <string name="longitude_title">Longitude</string>

    <string name="data_header">Data</string>
    <string name="data_title">Refresh rate</string>
    <string name="latitude_default_value">51.7833</string>
    <string name="longitude_default_value">19.4667</string>
    <string name="sunriseAzimuthLabel">Sunrise Azimuth</string>
    <string name="sunsetAzimuthLabel">Sunset Azimuth</string>
    <string name="sunriseTimeLabel">Sunrise</string>
    <string name="sunsetTimeLabel">Sunset</string>
    <string name="civilTwilightTimeLabel">Civil Twilight</string>
    <string name="civilDawnTimeLabel">Civil Dawn</string>
    <string name="moonsetTimeLabel">Moonset</string>
    <string name="moonriseTimeLabel">Moonrise</string>
    <string name="fullMoonTimeLabel">Full Moon</string>
    <string name="newMoonTimeLabel">New Moon</string>
    <string name="lunarDayLabel">Lunar Day</string>
    <string name="moonPhaseLabel">Moon Phase</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cityLabel">City</string>
    <string name="timeLabel">Time</string>
    <string name="coordinatesLabel">Coordinates</string>
    <string name="temperatureLabel">Temperature</string>
    <string name="pressureLabel">Pressure</string>
    <string name="conditionsLabel">Conditions</string>
    <string name="windDirectionLabel">Wind direction</string>
    <string name="windSpeedLabel">Wind speed</string>
    <string name="humidityLabel">Humidity</string>
    <string name="visibilityLabel">Visibility</string>
    <string name="unit_title">Unit</string>
    <string name="action_location">Add location</string>
    <string name="location_spinner">Location</string>
    <string name="location">Find location</string>
    <string name="find_city">Find city</string>
    <string name="action_favorite">Add to favourites</string>
    <string name="action_reload">Reload data</string>
    <string name="menu">M</string>
</resources>