<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timeLabel"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cityLabel"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/coordinatesLabel"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temperatureLabel"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/conditionsLabel"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/labelTextSize" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|top">

        <TextClock
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:format12Hour="hh:mm:ss a"
            android:format24Hour="HH:mm:ss"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/coordinates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/temerature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/valueTextSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/conditionsImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/conditions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/valueTextSize" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/visibilityLabel"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pressureLabel"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/humidityLabel"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/windDirectionLabel"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/windSpeedLabel"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/labelTextSize" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|top">

        <TextView
            android:id="@+id/visibility"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/windDirection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/valueTextSize" />

    </TableRow>
</TableLayout>