<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    tools:context=".fragment.BasicInfoFragment" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/cityLabel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/timeLabel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/labelTextSize" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|top">

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/valueTextSize" />

        <TextClock
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:format12Hour="hh:mm:ss a"
            android:format24Hour="HH:mm:ss"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/valueTextSize" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/coordinatesLabel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/temperatureLabel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/labelTextSize" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|top">

        <TextView
            android:id="@+id/coordinates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/temerature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/valueTextSize" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/pressureLabel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/conditionsLabel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/labelTextSize" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|top">

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/conditions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/valueTextSize" />

    </TableRow>
</TableLayout>