<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    tools:context=".fragment.AdvancedInfoFragment" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/windDirectionLabel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/windSpeedLabel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/labelTextSize" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|top">

        <TextView
            android:id="@+id/windDirection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/valueTextSize" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/humidityLabel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/visibilityLabel"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/labelTextSize" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|top">

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/valueTextSize" />

        <TextView
            android:id="@+id/visibility"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/valueTextSize" />
    </TableRow>

</TableLayout>